# pugg

./: .gitignore  CMakeLists.txt  Doxyfile  Driver_8h.html  Driver_8h.js  Driver_8h__dep__incl.map  Driver_8h__dep__incl.md5  Driver_8h__incl.map  Driver_8h__incl.md5  Driver_8h_source.html  Kernel_8h.html  Kernel_8h.js  Kernel_8h__incl.map  Kernel_8h__incl.md5  Kernel_8h_source.html  Plugin_8h.html  Plugin_8h.js  Plugin_8h__dep__incl.map  Plugin_8h__dep__incl.md5  Plugin_8h__incl.map  Plugin_8h__incl.md5  Plugin_8h_source.html  README.md  README_8md.html  annotated.html  annotated_dup.js  classes.html  classpugg_1_1Driver-members.html  classpugg_1_1Driver.html  classpugg_1_1Driver.js  classpugg_1_1Kernel-members.html  classpugg_1_1Kernel.html  classpugg_1_1Kernel.js  classpugg_1_1detail_1_1DllHandle-members.html  classpugg_1_1detail_1_1DllHandle.html  classpugg_1_1detail_1_1DllHandle.js  dir_38dab47235d066138e4236e6b6f084d1.html  dir_38dab47235d066138e4236e6b6f084d1.js  dir_38dab47235d066138e4236e6b6f084d1_dep.map  dir_38dab47235d066138e4236e6b6f084d1_dep.md5  (+30 more)
.github/workflows/: cmake.yml  docs.yml
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  (+10 more)
src/pugg/: CMakeLists.txt
src/pugg/include/pugg/: Driver.h  Kernel.h  Plugin.h
src/test_projects/PangeaAnimals/: plugin.cpp
src/test_projects/PanthalassaAnimals/: plugin.cpp
src/test_projects/Zoo/: main.cpp
tests/: CMakeLists.txt  integration_tests.cpp  unit_tests.cpp
